; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/line6/extr_dumprequest.c_line6_dumpreq_destructbuf.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/line6/extr_dumprequest.c_line6_dumpreq_destructbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.line6_dump_request = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @line6_dumpreq_destructbuf(%struct.line6_dump_request* %0, i32 %1) #0 {
  %3 = alloca %struct.line6_dump_request*, align 8
  %4 = alloca i32, align 4
  store %struct.line6_dump_request* %0, %struct.line6_dump_request** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.line6_dump_request*, %struct.line6_dump_request** %3, align 8
  %6 = icmp eq %struct.line6_dump_request* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %2
  br label %36

8:                                                ; preds = %2
  %9 = load %struct.line6_dump_request*, %struct.line6_dump_request** %3, align 8
  %10 = getelementptr inbounds %struct.line6_dump_request, %struct.line6_dump_request* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = load i32, i32* %4, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i64 %13
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %8
  br label %36

19:                                               ; preds = %8
  %20 = load %struct.line6_dump_request*, %struct.line6_dump_request** %3, align 8
  %21 = getelementptr inbounds %struct.line6_dump_request, %struct.line6_dump_request* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = load i32, i32* %4, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i64 %24
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i32*, i32** %26, align 8
  %28 = call i32 @kfree(i32* %27)
  %29 = load %struct.line6_dump_request*, %struct.line6_dump_request** %3, align 8
  %30 = getelementptr inbounds %struct.line6_dump_request, %struct.line6_dump_request* %29, i32 0, i32 0
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** %30, align 8
  %32 = load i32, i32* %4, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i64 %33
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  store i32* null, i32** %35, align 8
  br label %36

36:                                               ; preds = %19, %18, %7
  ret void
}

declare dso_local i32 @kfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
